--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/part-release/part-release.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/part-release/part-release.component.html
@@ -175,11 +175,13 @@
                                 <thead>
                                     <th [class.table-padding-start]="fullReleaseScreen" class="transparent">Total Gross
                                         Weight</th>
-                                    <th class="transparent w100">Deduction Weight</th>
+                                    <!-- <th class="transparent w100">Deduction Weight</th> -->
                                     <ng-container *ngIf="!fullReleaseScreen">
-                                        <th class="transparent">Net Weight <br> (Release Ornament)</th>
-                                        <th class="transparent w100">Net Weight <br> (Remaining Ornament)</th>
-                                        <th class="transparent table-amount padding-right">Ornament Release Amount</th>
+                                        <th class="transparent">Net Weight <br> (Released)</th>
+                                        <th class="transparent w100">Net Weight <br> (Pledged)</th>
+                                        <th class="transparent table-amount">Ornament Release Amount</th>
+                                        <th class="transparent table-amount">Loan ID</th>
+                                        <th class="transparent table-amount padding-right">Loan Amount</th>
                                     </ng-container>
                                     <ng-container *ngIf="fullReleaseScreen">
                                         <th class="transparent" style="width: 20%; padding-left: 5%;">Net Weight</th>
@@ -194,15 +196,32 @@
                                     <tr *ngIf="totalSelectedOrnamentDetails">
                                         <td class="table-padding-start">
                                             {{ totalSelectedOrnamentDetails.ornamentWeight.releaseGrossWeight }} gm</td>
-                                        <td>{{ totalSelectedOrnamentDetails.ornamentWeight.releaseDeductionWeight }} gm
-                                        </td>
+                                        <!-- <td>{{ totalSelectedOrnamentDetails.ornamentWeight.releaseDeductionWeight }} gm
+                                        </td> -->
                                         <ng-container *ngIf="!fullReleaseScreen">
                                             <td>{{ totalSelectedOrnamentDetails.ornamentWeight.releaseNetWeight }} gm
                                             </td>
                                             <td>{{ totalSelectedOrnamentDetails.ornamentWeight.remainingNetWeight }} gm
                                             </td>
-                                            <td class="table-amount padding-right">
+                                            <td class="table-amount">
                                                 {{ totalSelectedOrnamentDetails.ornamentWeight.releaseAmount }}</td>
+                                            <td class="table-amount">
+                                                {{ totalSelectedOrnamentDetails.loanInfo.loanData[0].loanUniqueId }}
+                                                <br>
+                                                <span *ngIf="totalSelectedOrnamentDetails.loanInfo.loanData[1]">
+
+                                                    {{ totalSelectedOrnamentDetails.loanInfo.loanData[1].loanUniqueId }}
+                                                </span>
+                                            </td>
+                                          
+                                            <td class="table-amount padding-right">
+                                                {{ totalSelectedOrnamentDetails.loanInfo.loanData[0].loanAmount }}
+                                                <br>
+                                                <span *ngIf="totalSelectedOrnamentDetails.loanInfo.loanData[1]">
+
+                                                    {{ totalSelectedOrnamentDetails.loanInfo.loanData[1].loanAmount }}
+                                                </span>
+                                            </td>
                                         </ng-container>
                                         <ng-container *ngIf="fullReleaseScreen">
                                             <td style="padding-left: 5%;">
@@ -237,8 +256,10 @@
                     <div class="table-div table-responsive kt-padding-t-15">
                         <table class="table outer-border">
                             <thead>
-                                <th class="transparent" style="width: 100px;">Loan ID</th>
-                                <th class="transparent " style="width: 120px;">Loan Amount</th>
+                                <!-- <th class="transparent" style="width: 100px;">Loan ID</th>
+                                <th class="transparent " style="width: 120px;">Loan Amount</th> -->
+                                <th class="transparent "> Interest Payable</th>
+                                <th class="transparent "> Augmont Rebate</th>
                                 <th class="transparent "> Ornament Release Amount</th>
                                 <th class="transparent ">Interest Amount</th>
                                 <th class="transparent ">Penal Interest </th>
@@ -247,21 +268,39 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>
+                                    <!-- <td>
                                         <ng-container
                                             *ngFor="let item of totalSelectedOrnamentDetails.loanInfo.loanData">
                                             <div>{{item.loanUniqueId}}</div>
                                         </ng-container>
                                     </td>
                                     <td>
-                                        <!-- <ng-container
+                                        <ng-container
                                             *ngFor="let item of totalSelectedOrnamentDetails.loanInfo.loanData">
                                             <div>{{item.loanAmount}}</div>
-                                        </ng-container> -->
+                                        </ng-container>
                                         <div class="" *ngFor="let loan of loanDetails.customerLoan.customerLoan">
                                             {{loan.loanAmount}}
                                         </div>
-                                        <!-- {{ totalSelectedOrnamentDetails.loanInfo.finalLoanAmount }} -->
+                                        {{ totalSelectedOrnamentDetails.loanInfo.finalLoanAmount }}
+                                    </td> -->
+                                    <td>
+                                        <div class="">
+                                            {{ totalSelectedOrnamentDetails?.interest?.securedTotalInterest }}
+                                        </div>
+                                        <div class=""
+                                            *ngIf="totalSelectedOrnamentDetails?.loanInfo?.loanData?.length > 1">
+                                            {{ totalSelectedOrnamentDetails?.interest?.unsecuredTotalInterest }}
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="">
+                                            {{ totalSelectedOrnamentDetails?.interest?.securedRebate }}
+                                        </div>
+                                        <div class=""
+                                            *ngIf="totalSelectedOrnamentDetails?.loanInfo?.loanData?.length > 1">
+                                            {{ totalSelectedOrnamentDetails?.interest?.unsecuredRebate }}
+                                        </div>
                                     </td>
                                     <td class="">
                                         {{ totalSelectedOrnamentDetails.ornamentWeight.releaseAmount }}</td>
