--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/quick-pay/quick-pay.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/quick-pay/quick-pay.component.html
@@ -10,6 +10,7 @@
                         <th class="transparent">Scheme Name</th>
                         <th class="transparent">Tenure</th>
                         <th class="transparent">Interest Rate</th>
+                        <th class="transparent"> Interest Rate after Rebate</th>
                         <th class="transparent">Next Due Date</th>
                         <th class="transparent">Status</th>
                     </thead>
@@ -37,11 +38,16 @@
                                 </span>
                             </td>
                             <td class="">{{loanDetails?.tenure}} Months</td>
-                            <td class="">{{loanDetails?.customerLoan[0]?.currentInterestRate }}%
+                            <td class="">{{loanDetails?.customerLoan[0]?.rebateInterestRate }}%
                                 <br>
                                 <span *ngIf="loanDetails?.customerLoan[1]">
-                                    {{loanDetails?.customerLoan[1]?.currentInterestRate }}%
+                                    {{loanDetails?.customerLoan[1]?.rebateInterestRate }}%
                                 </span></td>
+                                <td class="">{{loanDetails?.customerLoan[0]?.currentInterestRate }}%
+                                    <br>
+                                    <span *ngIf="loanDetails?.customerLoan[1]">
+                                        {{loanDetails?.customerLoan[1]?.currentInterestRate }}%
+                                    </span></td>
                             <td *ngIf="loanDetails?.nextDueDate else blankTableValue">
                                 {{loanDetails?.nextDueDate | date : 'mediumDate'}}</td>
                             <td class="text-warning"
