--- a/gold-admin-frontend/src/app/views/partials/components/loan-scrap-details/loan-scrap-details.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/loan-scrap-details/loan-scrap-details.component.html
@@ -24,7 +24,7 @@
                     <div class=" text-color font-weight-500 kt-padding-b-5">
                         {{details?.customer?.customerUniqueId}}</div>
                 </div>
-                <div class="col-2" *ngIf="masterLoanId">
+                <div class="col" *ngIf="masterLoanId">
                     <div class="text-gray font-weight-500 kt-padding-b-5">Loan Amount</div>
                     <div class=" text-color font-weight-500 kt-padding-b-5 d-block">
                         <div>
@@ -78,6 +78,20 @@
                     <div class="text-gray font-weight-500 kt-padding-b-5">Interest Rate</div>
                     <div class=" text-color font-weight-500 kt-padding-b-5 d-block">
                         <div>
+                            {{details?.customerLoan[0]?.rebateInterestRate}}%
+                            P.M
+                        </div>
+                        <div *ngIf="details?.customerLoan[1]?.rebateInterestRate">
+                            {{details?.customerLoan[1]?.rebateInterestRate}}%
+                            P.M
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col" *ngIf="masterLoanId">
+                    <div class="text-gray font-weight-500 kt-padding-b-5">Interest Rate After Rebate</div>
+                    <div class=" text-color font-weight-500 kt-padding-b-5 d-block">
+                        <div>
                             {{details?.customerLoan[0]?.interestRate}}%
                             P.M
                         </div>
@@ -122,11 +136,11 @@
                         {{details?.loanNomineeDetail[0].nomineeName | titlecase}}
                     </div>
                 </div>
-                <div class="col" *ngIf="masterLoanId">
+                <!-- <div class="col" *ngIf="masterLoanId">
                     <div class="text-gray font-weight-500 kt-margin-b-5">Age</div>
                     <div class="text-color font-weight-500">{{details?.loanNomineeDetail[0].nomineeAge}}
                     </div>
-                </div>
+                </div> -->
                 <div class="col" *ngIf="masterLoanId">
                     <div class="text-gray font-weight-500 kt-margin-b-5">Relation</div>
                     <div class="text-color font-weight-500">
