loantransfer bank transfer type

--- a/gold-admin-frontend/src/app/views/partials/components/emi-logs-dialog/emi-logs-dialog.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/emi-logs-dialog/emi-logs-dialog.component.html
@@ -5,13 +5,13 @@
         <div class="table-div kt-padding-t-10 kt-padding-b-20">
             <table class="table outer-border">
                 <thead>
-                    <th class="transparent">EMI Due Date</th>
-                    <th class="transparent table-amount">Interest Amount</th>
-                    <th class="transparent table-amount">Interest Paid Amount</th>
-                    <th class="transparent table-amount">Penal Amount</th>
-                    <th class="transparent table-amount">Penal Paid Amount</th>
-                    <th class="transparent">Payment Date</th>
-                    <th class="transparent table-amount">Pending Interest EMI</th>
+                    <th class="transparent">EMI Due <br> Date</th>
+                    <th class="transparent table-amount">Interest <br> Amount</th>
+                    <th class="transparent table-amount">Interest Paid <br> Amount</th>
+                    <th class="transparent table-amount">Penal <br> Amount</th>
+                    <th class="transparent table-amount">Penal Paid <br>Amount</th>
+                    <th class="transparent">Payment <br>Date</th>
+                    <th class="transparent table-amount">Pending<br>Interest EMI</th>
                     <th class="transparent">Status</th>
                 </thead>
                 <tbody>
