--- a/gold-admin-frontend/src/app/views/pages/admin/sip-management/sip-investment-tenure/sip-investment-tenure-add/sip-investment-tenure-add.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/sip-management/sip-investment-tenure/sip-investment-tenure-add/sip-investment-tenure-add.component.html
@@ -1,37 +1,37 @@
 <kt-portlet>
     <kt-modal-header [title]='title' (action)="action($event)"></kt-modal-header>
     <kt-portlet-body>
-        <form [formGroup]="leadSourceForm">
+        <form [formGroup]="SipInvestmentTenureForm">
             <div class="row ">
                 <div class="col-12">
                     <div class="row justify-content-center kt-margin-t-10">
                         <div class="col-4 form-label">
-                            <label class="kt-padding-l-10 mandatory">Lead</label>
+                            <label class="kt-padding-l-10 mandatory">Sip Investment Tenure</label>
                         </div>
                         <div class="col-8">
-                            <input type="text" class="form-control " formControlName="leadName"
-                                [class.isError]="controls.leadName.invalid &&  controls.leadName.touched">
-                            <mat-error *ngIf="controls.leadName.touched && controls.leadName.errors?.required">
+                            <input type="text" class="form-control text-capitalize" formControlName="sipInvestmentTenure"
+                                [class.isError]="controls.sipInvestmentTenure.invalid &&  controls.sipInvestmentTenure.touched">
+                            <mat-error *ngIf="controls.sipInvestmentTenure.touched && controls.sipInvestmentTenure.errors?.required">
                                 Required field
-                            </mat-error>
-                            <mat-error *ngIf="controls.leadName.touched && controls.leadName.errors?.pattern">
-                                Invalid Input
                             </mat-error>
                         </div>
                     </div>
-
-                    <!-- <div class="row justify-content-center kt-margin-t-10">
+                    <div class="row justify-content-center kt-margin-t-10">
                         <div class="col-4 form-label">
-                            <label class="kt-padding-l-10 mandatory">Source</label>
+                            <label class="kt-padding-l-10 mandatory">Sip Investment Tenure</label>
                         </div>
                         <div class="col-8">
-                            <input type="text" class="form-control text-capitalize" formControlName="source"
-                                [class.isError]="controls.source.invalid &&  controls.source.touched">
-                            <mat-error *ngIf="controls.source.touched && controls.source.errors?.required">
+                            <input type="text" class="form-control " formControlName="sipInvestmentTenureStatus"
+                                [class.isError]="controls.sipInvestmentTenureStatus.invalid &&  controls.sipInvestmentTenureStatus.touched">
+                            <mat-error *ngIf="controls.sipInvestmentTenureStatus.touched && controls.sipInvestmentTenureStatus.errors?.required">
                                 Required field
                             </mat-error>
+                            <!-- <mat-error *ngIf="controls.leadName.touched && controls.leadName.errors?.pattern">
+                                Invalid Input
+                            </mat-error> -->
                         </div>
-                    </div> -->
+                    </div>
+
                 </div>
             </div>
         </form>
