--- a/gold-admin-frontend/src/app/views/pages/admin/sip-management/sip-investment-tenure/sip-investment-tenure-list/sip-investment-tenure-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/sip-management/sip-investment-tenure/sip-investment-tenure-list/sip-investment-tenure-list.component.html
@@ -3,15 +3,15 @@
         <div class="mat-table__wrapper">
             <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource">
 
-                <ng-container matColumnDef="lead">
-                    <mat-header-cell *matHeaderCellDef>Lead</mat-header-cell>
+                <ng-container matColumnDef="sipInvestmentTenure">
+                    <mat-header-cell *matHeaderCellDef>Sip Investment Tenure</mat-header-cell>
                     <mat-cell *matCellDef="let item">{{item.leadName}}</mat-cell>
                 </ng-container>
 
-                <!-- <ng-container matColumnDef="source">
-                    <mat-header-cell *matHeaderCellDef>Source</mat-header-cell>
+                <ng-container matColumnDef="sipInvestmentTenureStatus">
+                    <mat-header-cell *matHeaderCellDef>Sip Investment Tenure Status</mat-header-cell>
                     <mat-cell *matCellDef="let item">{{item.sourceName}}</mat-cell>
-                </ng-container> -->
+                </ng-container>
 
                 <ng-container matColumnDef="action">
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
