customer loan transfer

--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer/loan-transfer.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer/loan-transfer.component.html
@@ -305,7 +305,7 @@
                     <mat-tab *ngIf="permission.loanTransferDisbursal || action === 'view'" label="Disbursal"
                         [formGroup]="disbursalForm" [disabled]="disabled[3]">
 
-                        <div class="row justify-content-center kt-padding-t-25">
+                        <!-- <div class="row justify-content-center kt-padding-t-25">
                             <div class="col-6">
                                 <div class="row">
                                     <div class="col-4 form-label">
@@ -317,7 +317,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="row justify-content-center kt-padding-t-25">
                             <div class="col-6">
                                 <div class="row">
