--- a/gold-admin-frontend/src/app/views/pages/admin/loan-settings/loan-scheme/loan-scheme.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-settings/loan-scheme/loan-scheme.component.html
@@ -37,29 +37,31 @@
                                 </div>
                                 <div class="col">
                                     <div class="row pb-2">
-                                        <div class="col-6">
+                                        <!-- <div class="col-6">
                                             <mat-slide-toggle disabled [checked]="schemeDeatils.isSplitAtBeginning">
                                                 <strong>Split at beginning</strong>
                                             </mat-slide-toggle>
-                                            <!-- <mat-radio-group class="example-radio-group">
+                                             <mat-radio-group class="example-radio-group">
                                                 <mat-radio-button class="example-radio-button" disabled
                                                     [value]="schemeDeatils.isSplitAtBeginning">
                                                     <strong>Split at beginning</strong>
                                                 </mat-radio-button>
-                                            </mat-radio-group> -->
-                                        </div>
-                                        <!-- <div class="col-3" *ngIf="schemeDeatils.schemeType == 'unsecured'">
+                                            </mat-radio-group>
+                                        </div>  <div class="col-3" *ngIf="schemeDeatils.schemeType == 'unsecured'">
                                             <mat-slide-toggle [disabled]="schemeDeatils.default"
                                                 (change)="changeDefault($event.checked, idx, schemeDeatils,i)"
                                                 [checked]="schemeDeatils.default">
                                                 <strong>Default</strong>
                                             </mat-slide-toggle>
                                         </div> -->
-                                        <div class="col offset-3">
-                                            <mat-slide-toggle [checked]="schemeDeatils.isActive"[disabled]="!schemeDeatils.isActive"
+                                        <div class="col offset-6">
+                                            <mat-slide-toggle  class="float-right" [checked]="schemeDeatils.isActive"[disabled]="!schemeDeatils.isActive"
                                             (change)="confirmation($event.checked, i, idx,schemeDeatils)">
                                                 <strong>Status</strong>
                                             </mat-slide-toggle>
+                                        </div>
+                                        <div class="col text-center" >
+                                            <img class="kt-pointer" src="../../../../../../assets/media/icons/edit.svg" alt="" (click)="openRpgModal(schemeDeatils)">
                                         </div>
                                     </div>
                                 </div>
