--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer-list/loan-transfer-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer-list/loan-transfer-list.component.html
@@ -24,7 +24,7 @@
                     <mat-header-cell *matHeaderCellDef>
                         <div class="">Outstanding Loan Amount</div>
                     </mat-header-cell>
-                    <mat-cell *matCellDef="let loan">{{loan?.loanTransfer?.disbursedLoanAmount}}</mat-cell>
+                    <mat-cell *matCellDef="let loan">{{loan?.loanTransfer?.outstandingLoanAmount}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="date">
